# docs

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
concepts/agentic-shell/: index.html
concepts/application-ecosystem/: index.html
concepts/blueprint-ecosystem/: index.html
concepts/shell-as-ide/: index.html
concepts/thinking-in-pipelines/: index.html
cookbook/daily-reporting-workflow/: index.html
cookbook/on-demand-data-api/: index.html
docs/: index.md
docs/concepts/: agentic-shell.md  application-ecosystem.md  blueprint-ecosystem.md  shell-as-ide.md  thinking-in-pipelines.md
docs/cookbook/: daily-reporting-workflow.md  on-demand-data-api.md
docs/how-to/: building-pipelines.md  connect-database.md  connect-rest-api.md  manage-processes.md  managing-your-workspace.md  packaging-an-application.md  use-the-agent.md
docs/includes/: installation.md
docs/reference/: blueprint-spec.md  cli.md  power-tools.md  repl.md
docs/tutorials/: compiling-a-blueprint.md  getting-started.md
how-to/building-pipelines/: index.html
how-to/connect-database/: index.html
how-to/connect-rest-api/: index.html
how-to/manage-processes/: index.html
how-to/managing-your-workspace/: index.html
how-to/packaging-an-application/: index.html
how-to/use-the-agent/: index.html
includes/installation/: index.html
reference/blueprint-spec/: index.html
reference/cli/: index.html
reference/power-tools/: index.html
reference/repl/: index.html
search/: search_index.json
(+2 files in other folders)
